Fix Java 11 compatibility and update testng.xml to include registration tests
- Fix toList() to collect(Collectors.toList()) for Java 11 compatibility
- Update testng.xml to include all 4 registration test classes
- Update build.gradle to use full testng.xml instead of testng-smoke.xml

Co-Authored-By: mason.batchelor@cognition.ai <masonbatchelor81@gmail.com>